fixed screen jumping bug on mobile

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -15,4 +15,5 @@
 
 .main {
   position: relative;
+  overflow: hidden;
 }
